# bwinf-de-medal

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Benutzerhandbuch.md  Cargo.toml  Configuration.md  Filefile  INSTALL_WIN_GERMAN.md  LICENSE  Makefile  README.md  config.json.sample  config.yaml.sample  contest.json
.gitlab/issue_templates/: bugreport.md
iron-sessionstorage/: Cargo.toml
iron-sessionstorage/src/: lib.rs
manuals/: Benutzerhandbuch.md  COMPILE_WINDOWS.md  COMPILE_WINDOWS_DE.md
migrations/postgres/: 0001_create_contest.sql  0001_create_contest_tags.sql  0001_create_grade.sql  0001_create_group.sql  0001_create_participation.sql  0001_create_session_user.sql  0001_create_submission.sql  0001_create_task.sql  0001_create_taskgroup.sql  0002_alter_contest_add_image_language_category.sql  0002_alter_contest_add_message.sql  0002_alter_contest_add_mingrade_maxgrade.sql  0002_alter_contest_add_protected.sql  0002_alter_contest_add_requires_login.sql  0002_alter_contest_add_review_start_end.sql  0002_alter_contest_add_standalone_task.sql  0002_alter_group_add_group_created_set_now.sql  0002_alter_session_user_add_account_created.sql  0002_alter_session_user_add_is_admin.sql  0002_alter_session_user_add_sex.sql  0002_alter_taskgroup_add_active.sql  0002_create_participation_meta.sql  0002_index_session_session_token.sql  0002_index_submission_session_session_task.sql  0002_update_session_user_set_missing_oauth_provider.sql  0003_all_tables_create_foreign_keys.sql  0003_all_tables_create_indexes.sql  0003_update_session_set_empty_account_created.sql  0003_update_taskgroup_set_active_true.sql  0004_create_foreign_key_participation_contest.sql
migrations/sqlite/: 0001_create_contest.sql  0001_create_grade.sql  0001_create_participation.sql  0001_create_session_user.sql  0001_create_submission.sql  0001_create_task.sql  0001_create_taskgroup.sql  0002_alter_session_user_add_salt.sql  0002_alter_session_user_rename_pmsid_add_oauthid.sql  0002_alter_submission_add_needs_validation.sql  0003_update_session_user_set_missing_oauth_provider.sql
migrations/sqlite_v2/: 0001_create_grade.sql  0001_create_group.sql  0001_create_participation.sql  0001_create_session_user.sql  0001_create_string_cache.sql  0001_create_submission.sql  0001_create_task.sql  0001_create_taskgroup.sql  0002_alter_contest_add_positionalnumber.sql  0002_alter_contest_add_protected.sql  0002_alter_contest_add_requires_login.sql  0002_alter_contest_add_review_start_end.sql  0002_alter_contest_add_secret.sql  0002_alter_contest_add_standalone_task.sql  0002_alter_contest_user_add_requires_contest.sql  0002_alter_group_add_group_created_set_now.sql  0002_alter_participation_add_annotation.sql  (+12 more)
rusqlite/: Cargo.toml
src/: config.rs  configreader.rs  configreader_yaml.rs  contestreader_yaml.rs  core.rs  db_apply_migrations.rs  db_conn.base.rs  db_conn.rs  db_conn_postgres.header.rs  db_conn_postgres.rs  db_conn_sqlite.rs  db_conn_sqlite_new.header.rs  db_conn_sqlite_new.rs  db_conn_warning_header.txt  db_objects.rs  foreigncontestimport.rs  functions.rs  generate_connectors.sh  helpers.rs  main.rs  oauth_provider.rs  tests.rs  webfw_iron.rs
tasks/: contest1.yaml
tasks/blub/: index.html
templates/: contest.hbs  contestresults.hbs  contests.hbs  greeting.hbs  group.hbs  groups.hbs  index.hbs  login.hbs  profile.hbs  task.hbs
tools/: generate_connectors.sh  install-hooks.sh  pre-commit
(+75 files in other folders)
