[package]
name = "medal"
version = "0.1.0"
authors = ["Robert Czechowski <czechowski@bwinf.de>"]

[features]
watch = ["handlebars-iron/watch"]
strict = [] # Treat warnings as a build error

[dependencies]
rusqlite = "0.14.0"
time = "0.1.40"
iron = "0.5.1"

rand = "0.5.5"
mount ="0.3"
router = "0.5"
params = "0.7"
serde = "1.0"
urlencoded = "0.5"
persistent = "0.3"
staticfile = "0.4"
serde_derive = "1.0"
handlebars-iron = "0.25.1"
iron-sessionstorage = "*"
serde_yaml = "*"
structopt = "*"

reqwest = "0.6.2"

linked-hash-map = "0.5.1"

bcrypt = "0.3"

webbrowser = "0.5.1"

[dependencies.serde_json]
version = "1.0.20"
features = ["preserve_order"]

[dependencies.postgres]
version = "0.15"
features = ["with-time"]