[package]
version = "1.4.2"
name = "medal"
authors = ["Robert Czechowski <czechowski@bwinf.de>", "Daniel Brüning <bruening@bwinf.de>"]

description = "A simple online contest platform"
homepage = "https://jwinf.de"
repository = "https://git.bwinf.de/bwinf/medal"
readme = "README.md"
license = "AGPL-3.0-or-later"
maintenance = { status = "active-developed" }

[features]
default  = ["rusqlite"]
complete = ["rusqlite", "postgres", "webbrowser"]
server   = ["rusqlite", "postgres"]
desktop  = ["rusqlite", "webbrowser"]
watch    = ["handlebars-iron/watch"]
strict   = [] # Treat warnings as a build error
debug    = []

[dependencies]
time = "0.1.40"
iron = "0.5.1"
rand = "0.5.5"
mount ="0.3"
router = "0.5"
params = "0.7"
serde = "1.0"
urlencoded = "0.5"
persistent = "0.3"
staticfile = "0.4"
serde_derive = "1.0"
handlebars-iron = "0.25.1"
iron-sessionstorage = { path = "iron-sessionstorage", version = ">=0.6"}
serde_yaml = "0.8.9"
structopt = "0.2.18"
reqwest = "0.9.19"
linked-hash-map = "0.5.1"
bcrypt = "0.3"
csv = "1.1"

[dependencies.serde_json]
version = "1.0.20"
features = ["preserve_order"]

[dependencies.webbrowser]
version = "0.5.1"
optional = true

[dependencies.rusqlite]
version = "0.14.0"
optional = true

[dependencies.postgres]
version = "0.15"
features = ["with-time"]
optional = true
